# Python

./: .gitignore  README.md
0 - Starting/: README.md
0 - Starting/ex00/: Hello.py
0 - Starting/ex04/: whatis.py
0 - Starting/ex06/: filterstring.py  ft_filter.py  test_filter.py
0 - Starting/ex09/: LICENSE  pyproject.toml
1 - Array/: README.md
1 - Array/ex00/: give_bmi.py  tester.py
1 - Array/ex01/: array2D.py  tester.py
1 - Array/ex02/: load_image.py  tester.py
1 - Array/ex03/: load_image.py  zoom.py
1 - Array/ex04/: rotate.py
1 - Array/ex05/: pimp_image.py  tester.py
2 - DataTable/ex00/: tester.py
2 - DataTable/ex01/: aff_life.py  load_csv.py
2 - DataTable/ex02/: aff_pop.py
2 - DataTable/ex03/: load_csv.py  projection_life.py
3 - OOP/: README.md
3 - OOP/ex00/: tester.py
3 - OOP/ex01/: S1E9.py  tester.py
3 - OOP/ex02/: DiamondTrap.py  S1E7.py  tester.py
3 - OOP/ex03/: ft_calculator.py  tester.py
3 - OOP/ex04/: ft_calculator.py  tester.py
Piscine Python/ex02/: find_ft_type.py  tester.py
Piscine Python/ex03/: NULL_not_found.py  tester.py
Piscine Python/ex05/: building.py
Piscine Python/ex08/: Loading.py
Piscine Python/ex09/: README.md
Python - 0 - Starting/ex01/: format_ft_time.py
Python - 0 - Starting/ex03/: NULL_not_found.py  tester.py
Python - 0 - Starting/ex07/: sos.py
Python - 0 - Starting/ex09/: setup.cfg  test.py
Python - 0 - Starting/ex09/ft_color/: __init__.py
Python - 2 - DataTable/: README.md
Python - 2 - DataTable/ex00/: load_csv.py
Python - 2 - DataTable/ex02/: aff_pop.py  load_csv.py
