[metadata]
name = ft_color
version = 0.0.1
description = A simple Python package to print colored text in terminal.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kai-Erh YEH
author_email = kaierhyeh@gmail.com
license = MIT

[options]
packages = find:
python_requires = >=3.10
